# rinfra

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml
.github/workflows/: ci.yml  sdk-release.yml
config/: main.example.yaml  master.example.yaml  standalone.example.yaml  worker.example.yaml
docs/: README.md  README.zh-CN.md  api-reference.md  api-reference.zh-CN.md  configuration.md  configuration.zh-CN.md  getting-started.md  getting-started.zh-CN.md  plugins.md  plugins.zh-CN.md
docs/sdk/: registry-sdk-troubleshooting.md  registry-sdk-troubleshooting.zh-CN.md  registry-sdk.md  registry-sdk.zh-CN.md
i18n/: en.yaml  zh-CN.yaml
rinfra-admin/backend/: Cargo.toml
rinfra-admin/backend/src/: extensions.rs  lib.rs  routes.rs
rinfra-admin/backend/src/auth/: middleware.rs  mod.rs  store.rs
rinfra-admin/frontend/: README.md  package-lock.json  package.json  vite.config.ts
rinfra-admin/frontend/src/: App.vue  style.css
rinfra-admin/frontend/src/api/: index.ts
rinfra-admin/frontend/src/router/: index.ts
rinfra-admin/frontend/src/views/: Cluster.vue  Config.vue  Dashboard.vue  GenericView.vue  Login.vue  Metrics.vue  Plugins.vue
rinfra-core/: Cargo.toml
rinfra-core/src/: appstate.rs  lib.rs
rinfra-core/src/audit/: mod.rs
rinfra-core/src/cache/: mod.rs
rinfra-core/src/cli/: mod.rs
rinfra-core/src/cluster/: mod.rs
rinfra-core/src/codec/: mod.rs  registry.rs
rinfra-core/src/compress/: mod.rs
rinfra-core/src/config/: mod.rs  model.rs  watch.rs
rinfra-core/src/crypto/: mod.rs
rinfra-core/src/error/: code.rs  mod.rs
rinfra-core/src/file_store/: mod.rs
rinfra-core/src/http_client/: mod.rs
rinfra-core/src/i18n/: mod.rs
rinfra-core/src/lock/: mod.rs
rinfra-core/src/mq/: mod.rs
rinfra-core/src/net/: middleware.rs  mod.rs  tcp.rs  transform.rs  ws.rs
rinfra-core/src/plugin/: context.rs  manifest.rs  mod.rs  registry.rs
rinfra-core/src/ratelimit/: mod.rs
rinfra-core/src/resilience/: circuit_breaker.rs  mod.rs  retry.rs
rinfra-core/src/response/: mod.rs
rinfra-core/src/rpc/: mod.rs
rinfra-core/src/script/: mod.rs  registry.rs
rinfra-core/src/store/: audit.rs  mapping.rs  mod.rs  registry.rs  spec.rs  value.rs
rinfra-core/src/timer/: mod.rs  registry.rs
rinfra-derive/: Cargo.toml
rinfra-derive/src/: lib.rs
rinfra-examples/: Cargo.toml
rinfra-examples/config/: main.example.yaml  master.example.yaml  proxy.example.yaml  web.example.yaml
rinfra-examples/src/: lib.rs  proxy.rs  web.rs
rinfra-plugins/: Cargo.toml
rinfra-plugins/src/: lib.rs
rinfra-plugins/src/audit/: file_logger.rs  mod.rs
rinfra-plugins/src/cache/: memory.rs  mod.rs  multilevel.rs  redis_cache.rs
rinfra-plugins/src/cli/: client.rs  handlers.rs  mod.rs  runner.rs
rinfra-plugins/src/cluster/: codec.rs  connection.rs  mod.rs  registry.rs  server.rs
rinfra-plugins/src/codec/: json.rs  mod.rs  msgpack.rs  protobuf.rs
rinfra-plugins/src/compress/: gzip.rs  lz4.rs  mod.rs
rinfra-plugins/src/config/: mod.rs
rinfra-plugins/src/config_watch/: file_watcher.rs  handlers.rs  mod.rs
rinfra-plugins/src/crypto/: aesgcm.rs  env_key_provider.rs  file_provider.rs  mod.rs  rotating_provider.rs
rinfra-plugins/src/file_store/: local.rs  mod.rs
rinfra-plugins/src/health/: checkers.rs  mod.rs
rinfra-plugins/src/http_client/: mod.rs  reqwest_client.rs
rinfra-plugins/src/i18n/: file_i18n.rs  mod.rs
rinfra-plugins/src/lock/: memory.rs  mod.rs  redis_lock.rs
rinfra-plugins/src/log/: mod.rs
rinfra-plugins/src/metrics/: mod.rs
rinfra-plugins/src/mq/: memory.rs  mod.rs  nats.rs  receiver.rs  redis_streams.rs
rinfra-plugins/src/net/: http.rs  mod.rs  tcp.rs  tcp_middleware.rs  ws.rs
rinfra-plugins/src/net/middleware/: audit.rs  auth.rs  builtin.rs  i18n_error.rs  mod.rs  ratelimit.rs  request_id.rs  trace_propagation.rs
rinfra-plugins/src/plugin/: builtin.rs  mod.rs
rinfra-plugins/src/ratelimit/: mod.rs  redis_limiter.rs
rinfra-plugins/src/resilience/: mod.rs
rinfra-plugins/src/rpc/: grpc.rs  mod.rs
rinfra-plugins/src/rpc/trpc/: client.rs  handler.rs  mod.rs  protocol.rs  server.rs
rinfra-plugins/src/runtime/: mod.rs
rinfra-plugins/src/script/: js.rs  mod.rs  python.rs  subprocess.rs  wasm.rs
rinfra-plugins/src/script/workers/: node_worker.js  python_worker.py
rinfra-plugins/src/store/: executor.rs  generic_repo.rs  mod.rs  mysql.rs  sqlite.rs  transaction.rs
rinfra-plugins/src/telemetry/: mod.rs  otel.rs
rinfra-plugins/src/timer/: mod.rs  simple.rs
rinfra-plugins/tests/: integration_cluster.rs  integration_standalone.rs
sdks/registry-go/: README.md  go.mod
sdks/registry-go/examples/: minimal_register.go
sdks/registry-go/registrysdk/: client.go  protocol_test.go  rpc.go  rpc_test.go  types.go  types_test.go
sdks/registry-java/: README.md  pom.xml
sdks/registry-java/examples/: MinimalRegister.java
sdks/registry-java/src/main/java/io/rinfra/registry/sdk/: CallOptions.java  ConnectionState.java  Endpoint.java  IntegrationProbe.java  NodeInfo.java  NodeProvider.java  Registration.java  RegistryClient.java  RegistryClientConfig.java  RegistryNodeProvider.java  ResolveOptions.java  Resolver.java  RetryPolicy.java  RpcError.java  RpcErrorCode.java  RpcInvoker.java  UnaryCaller.java
sdks/registry-java/src/test/java/io/rinfra/registry/sdk/: RegistryClientConfigTest.java  RpcSdkTest.java
sdks/registry-python/: README.md  pyproject.toml
sdks/registry-python/examples/: minimal_register.py
sdks/registry-python/src/rinfra_registry_sdk/: __init__.py  client.py  rpc.py
sdks/registry-python/tests/: test_rpc.py  test_validation.py
sdks/registry-typescript/: README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.cjs.json
sdks/registry-typescript/examples/: minimal-register.ts
sdks/registry-typescript/src/: index.test.ts  index.ts  rpc.ts
