[package]
name = "rinfra-plugins"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin implementations for rinfra"

[features]
default = []
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
telemetry = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]
nats = ["async-nats"]
redis-mq = []

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
cron = "0.15"
bytes = "1"
rand = "0.8"
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
rinfra-core = { path = "../rinfra-core", features = ["axum"] }
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
jsonwebtoken = "9"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
prost = "0.13"
prost-types = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate"] }
tonic = "0.12"
tonic-health = "0.12"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["net", "rt", "macros", "signal", "sync", "time", "process", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
lz4_flex = "0.13.0"
flate2 = "1.1.9"
opentelemetry = { version = "0.27", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"], optional = true, default-features = false }
tracing-opentelemetry = { version = "0.28", optional = true }
async-nats = { version = "0.38", optional = true }
http-body-util = "0.1"
hostname = "0.4.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
