[package]
name = "rinfra-plugins"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin implementations for rinfra"

[features]
default = ["memory-cache", "metrics", "http-client", "jwt-auth", "compress",
           "timer", "crypto", "codec-msgpack", "codec-protobuf"]

# All optional features enabled
full = ["postgres", "redis", "grpc", "memory-cache", "http-client", "jwt-auth",
        "metrics", "crypto", "compress", "timer", "codec-msgpack", "codec-protobuf",
        "nats", "redis-mq", "mysql", "sqlite", "telemetry"]

# Storage backends
postgres = ["dep:sqlx"]
mysql    = ["dep:sqlx", "sqlx/mysql"]
sqlite   = ["dep:sqlx", "sqlx/sqlite"]

# Cache
memory-cache = ["dep:moka"]
redis        = ["dep:redis"]

# Message Queue
nats     = ["dep:async-nats"]
redis-mq = ["redis"]

# RPC
grpc = ["dep:tonic", "dep:tonic-health", "dep:prost-types"]

# HTTP Client
http-client = ["dep:reqwest"]

# Auth
jwt-auth = ["dep:jsonwebtoken"]

# Observability
metrics   = ["dep:metrics-exporter-prometheus"]
telemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]

# Crypto
crypto = ["dep:aes-gcm"]

# Compression
compress = ["dep:lz4_flex", "dep:flate2"]

# Timer
timer = ["dep:cron"]

# Codec
codec-msgpack  = ["dep:rmp-serde"]
codec-protobuf = ["dep:prost", "dep:prost-types"]

[dependencies]
# ── Always-on (core) ────────────────────────────────────────────────
rinfra-core = { path = "../rinfra-core", features = ["axum"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
hostname = "0.4.2"
http-body-util = "0.1"
metrics = "0.24"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["net", "rt", "macros", "signal", "sync", "time", "process", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }

# ── Optional (feature-gated) ────────────────────────────────────────
aes-gcm = { version = "0.10", optional = true }
cron = { version = "0.15", optional = true }
flate2 = { version = "1.1.9", optional = true }
jsonwebtoken = { version = "9", optional = true }
lz4_flex = { version = "0.13.0", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true }
moka = { version = "0.12", features = ["future"], optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
rmp-serde = { version = "1", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate"], optional = true }
tonic = { version = "0.12", optional = true }
tonic-health = { version = "0.12", optional = true }

# ── Telemetry (optional) ────────────────────────────────────────────
opentelemetry = { version = "0.27", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"], optional = true, default-features = false }
tracing-opentelemetry = { version = "0.28", optional = true }
async-nats = { version = "0.38", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
