[package]
name = "rinfra-admin"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Admin management backend for rinfra"

[dependencies]
rinfra-core = { path = "../../rinfra-core", features = ["axum"] }
rinfra-plugins = { path = "../../rinfra-plugins" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
tower-http = { version = "0.6", features = ["fs"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
metrics-exporter-prometheus = "0.16"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["full"] }
